# learning-lm-rs

./: .gitignore  Cargo.toml  项目报告.md
pytorch_imp/: a.py  load_model.py  self_attention.py
src/: cli.rs  kvcache.rs  main.rs  model.rs  operators.rs  output.rs  params.rs  tensor.rs
src/llm/: config.rs  data.rs  dtype.rs  kvcache.rs  linear.rs  mlp.rs  mod.rs  model.rs  module.rs  operators.rs  output.rs  params.rs  rms_norm.rs  self_attention.rs  tensor.rs
src/operator/: chat_op.rs  mod.rs  once_op.rs  server_op.rs  web_op.rs
src/types/: completion.rs  mod.rs  request.rs  response.rs
templates/: chatml.jinja2
