[package]
name = "learning-lm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4.3"
tokenizers = "0.19.1"
rand = "0.8"
half = "2.4.1"
clap = { version = "4.5.17", features = ["derive"] }
anyhow = "1.0.89"
tera = "1.20.0"
derive_builder = "0.20.1"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"] }
silent = { version = "1.4.2", features = ["sse"] }
async-trait = "0.1.82"
futures-util = "0.3.30"
